--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>4.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+            <version>2.0.23</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
