--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,11 +13,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-env:
-  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-  DB_USERNAME: ${{ secrets.DB_USERNAME }}
-  DB_HOST: ${{ secrets.DB_HOST }}
-  DB_NAME: ${{ secrets.DB_NAME }}
 
 jobs:
   build:
@@ -33,7 +28,14 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      env:
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_NAME: ${{ secrets.DB_NAME }}
+      run: mvn clean -B package --file pom.xml
+      
+      
 
 
     # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
