--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
         DB_USERNAME: ${{ secrets.DB_USERNAME }}
         DB_HOST: ${{ secrets.DB_HOST }}
         DB_NAME: ${{ secrets.DB_NAME }}
-      run: mvn clean -B package --file pom.xml
+      run: mvn -B package --file pom.xml
       
       
 
