--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <version>2.0.23</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sanctionco.jmail</groupId>
+            <artifactId>jmail</artifactId>
+            <version>1.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
